--- a/dwitter/templates/dwitter/profile.html
+++ b/dwitter/templates/dwitter/profile.html
@@ -8,14 +8,44 @@
         <h1 class="title is-1">
             {{profile.user.username|upper}}'s Dweets
         </h1>
+
+        <form method="post">
+            {% csrf_token %}
+            <div class="buttons has-addons">
+                {% if profile in user.profile.follows.all %}
+                <button class="button is-success is-static">
+                Follow
+            </button>
+                <button class="button is-danger" name="follow" value="unfollow">
+                Unfollow
+            </button> {% else %}
+                <button class="button is-success" name="follow" value="follow">
+                Follow
+            </button>
+                <button class="button is-danger is-static">
+                Unfollow
+            </button> {% endif %}
+            </div>
+        </form>
+    </div>
+
+    <div class="content">
+        {% for dweet in profile.user.dweets.all %}
+        <div class="box">
+            {{ dweet.body }}
+            <span class="is-small has-text-grey-light">
+                    ({{ dweet.created_at }})
+                </span>
+        </div>
+        {% endfor %}
     </div>
 
 </div>
 
-<div class="column is-one-third">
+<div class="column is-one-third is-pulled-right">
 
     <div class="block">
-        <a href="{%  url 'dwitter:profile_list'  %}">
+        <a href="{% url 'dwitter:profile_list' %}">
             <button class="button is-dark is-outlined is-fullwidth">
                 All Profiles
             </button>
@@ -30,7 +60,7 @@
             <ul>
                 {% for following in profile.follows.all %}
                 <li>
-                    <a href="{% url 'dwitter:profile' following.id %}">
+                    <a href="{% url 'dwitter:profile' following.id %} ">
                         {{ following }}
                     </a>
                 </li>
@@ -47,7 +77,7 @@
             <ul>
                 {% for follower in profile.followed_by.all %}
                 <li>
-                    <a href="{% url 'dwitter:profile' follower.id %}">
+                    <a href="{% url 'dwitter:profile' follower.id %} ">
                         {{ follower }}
                     </a>
                 </li>
