--- a/dwitter/templates/dwitter/profile_list.html
+++ b/dwitter/templates/dwitter/profile_list.html
@@ -1,6 +1,8 @@
 <!-- dwitter/templates/dwitter/profile_list.html -->
 
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+
+{% block content %}
 
 <div class="column">
 
