--- a/dwitter/templates/dwitter/dashboard.html
+++ b/dwitter/templates/dwitter/dashboard.html
@@ -2,15 +2,51 @@
 
 {% extends 'base.html' %} {% block content %}
 
-<div class="column">
-    {% for followed in user.profile.follows.all %} {% for dweet in followed.user.dweets.all %}
-    <div class="box">
-        {{ dweet.body }}
-        <span class="is-small has-text-grey-light">
-                    ({{ dweet.created_at }} by {{ dweet.user.username }}
-                </span>
+<div class="columns is-vertical">
+    <div class="column is-10">
+        {% for followed in user.profile.follows.all %} {% for dweet in dweets %}
+        <div class="box">
+
+            {{ dweet.user.username }} . ({{ dweet.created_at }} <br>
+            <span class="is-small has-text-grey-light">
+           {{dweet.body}}
+        </span>
+        </div>
+        {% endfor %} {% endfor %}
     </div>
-    {% endfor %} {% endfor %}
+
+    <div class="column is-one-third is-pulled-right">
+
+        <div class="block">
+            <a href="{% url 'dwitter:profile_list' %} ">
+                <button class="button is-dark is-outlined is-fullwidth">
+                All Profiles
+            </button>
+            </a>
+        </div>
+
+        <div class="block">
+            <a href="{% url 'dwitter:profile' request.user.profile.id %} ">
+                <button class="button is-success is-light is-outlined is-fullwidth">
+                My Profile
+            </button>
+            </a>
+        </div>
+
+        <div class="block">
+            <div class="block">
+                <h2 class="title is-2">Add a Dweet</h2>
+            </div>
+            <div class="block">
+                <form method="post">
+                    {% csrf_token %} {{ form.as_p }}
+                    <button class="button is-success is-fullwidth is-medium mt-5" type="submit">Dweet
+                </button>
+                </form>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 {% endblock content %}
